--- a/YuantaQuotesAPI/yuan_app/app.config
+++ b/YuantaQuotesAPI/yuan_app/app.config
@@ -1,3 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+<configSections>
+</configSections>
+<connectionStrings>
+    <add name="yuan_app.Properties.Settings.YuanSql" connectionString="Data Source=.;Initial Catalog=Yuanta;Persist Security Info=True;User ID=sa;Password=e2345678"
+        providerName="System.Data.SqlClient" />
+</connectionStrings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/></startup></configuration>
